--- a/client/index.css
+++ b/client/index.css
@@ -1,4 +1,11 @@
 body {
-    background: black;
+    /* background: black; */
     color: mediumaquamarine;
+}
+
+#box1 {
+    background-color: red;
+    width: 100px;
+    height: 100px;
+    margin: 0 auto;
 }
