--- a/client/index.css
+++ b/client/index.css
@@ -1,11 +1,17 @@
 body {
-    /* background: black; */
-    color: mediumaquamarine;
+    background-color: lightgrey;
+    color: black;
 }
 
 #box1 {
-    background-color: red;
+    background-color: black;
     width: 100px;
     height: 100px;
     margin: 0 auto;
+}
+
+#button1 {
+    background-color: whitesmoke;
+    padding: 2px 2px;
+
 }
